--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -1,4 +1,61 @@
+/* Globals */
+
+
+
+/* Navbar */
 .navbar-main-link {
     text-decoration: none;
     color: inherit;
+}
+
+.navbar-main-link:hover {
+    color: #353535;
+}
+
+
+/* Main Menu */
+.main-menu-button {
+    background-color: purple;
+    border: 2px solid black;
+    border-radius: 0;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    outline: none;
+    margin: 6px;
+    height: 48px;
+}
+
+.main-menu-link {
+    text-decoration: none;
+    color: white;
+    height: 100%;
+}
+
+.main-menu-button:hover {
+    transform: translateY(-4px); /* Pop up effect */
+    transform: translateX(-4px);
+    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.3); /* Dark shadow */
+}
+
+.main-menu-button-box {
+    display: flex;
+}
+
+.main-menu-text {
+    background-color: pink;
+    padding: 8px ;
+    border: 2px solid black;
+    border-radius: 0;
+}
+
+.main-menu-title {
+    font-size: 120px;
+    margin: 40px;
+
 }
