--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -1,4 +1,9 @@
 /* Globals */
+body {
+    background-color: #FFFF00;
+    font-family: Roboto, sans-serif;
+}
+
 
 
 
@@ -54,8 +59,31 @@
     border-radius: 0;
 }
 
-.main-menu-title {
-    font-size: 120px;
-    margin: 40px;
 
-}
+.main-menu-title {
+    font-size: 16vW;
+    margin: 40px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .main-menu-title span {
+    display: inline-block;
+  }
+  
+  .main-menu-title span:nth-child(2) {
+    margin-top: 40px;
+  }
+  
+  .main-menu-title span:nth-child(3) {
+    margin-top: 80px;
+  }
+  
+  .main-menu-title span:nth-child(4) {
+    margin-top: 120px;
+  }
+  
+  .main-menu-title span:nth-child(5) {
+    margin-top: 160px;
+  }
+  
