--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -52,6 +52,28 @@ button:hover {
 
 
 /* Main Menu */
+
+.settings-button{
+    border: 2px solid black;
+    border: none;
+}
+
+.settings-panel {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 300px; /* Adjust the width as needed */
+    background-color: #ffffff; /* Change the background color as needed */
+    box-shadow: -2px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(100%);
+}
+
+.settings-panel.show {
+    transform: translateX(0);
+}
+
 .main-menu-link {
     text-decoration: none;
     color: white;
