--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -63,8 +63,8 @@ button:hover {
     top: 0;
     right: 0;
     height: 100%;
-    width: 300px; /* Adjust the width as needed */
-    background-color: #ffffff; /* Change the background color as needed */
+    width: 300px; 
+    background-color: #ffffff; 
     box-shadow: -2px 0px 5px 0px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
     transform: translateX(100%);
@@ -74,6 +74,7 @@ button:hover {
     transform: translateX(0);
 }
 
+
 .main-menu-link {
     text-decoration: none;
     color: white;
@@ -81,9 +82,9 @@ button:hover {
 }
 
 .main-menu-button:hover {
-    transform: translateY(-4px); /* Pop up effect */
+    transform: translateY(-4px); 
     transform: translateX(-4px);
-    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.3); /* Dark shadow */
+    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.3); 
 }
 
 .main-menu-button-box {
