--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -52,22 +52,17 @@ button:hover {
 
 
 /* Main Menu */
-
-.settings-button{
-    border: 2px solid black;
-    border: none;
-}
-
 .settings-panel {
     position: fixed;
     top: 0;
     right: 0;
     height: 100%;
-    width: 300px; 
+    width: 200px; 
     background-color: #ffffff; 
     box-shadow: -2px 0px 5px 0px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
     transform: translateX(100%);
+    z-index: 9999;
 }
 
 .settings-panel.show {
@@ -103,6 +98,16 @@ button:hover {
     font-size: 20vW;
     margin: 20px;
   }
+
+.user-setting-box {
+display: flex !important;
+align-items: center !important;
+background-color: pink;
+padding: 8px ;
+border: 2px solid black;
+justify-content: space-between;
+}
+  
 
 
 /*Login page*/
