--- a/backend/styles/dark.css
+++ b/backend/styles/dark.css
@@ -40,6 +40,11 @@ button:hover {
     border: 2px solid black;
 }
 
+.flex-box {
+    display: flex;
+    align-items: center;
+}
+
 /* Navbar */
 .navbar-main-link {
     text-decoration: none;
