--- a/backend/styles/default.css
+++ b/backend/styles/default.css
@@ -50,6 +50,10 @@ button:hover {
     justify-content: center;
 }
 
+td {
+    text-align: center;
+}
+
 /* Navbar */
 .navbar-main-link {
     text-decoration: none;
@@ -133,4 +137,15 @@ justify-content: space-between;
     padding: 10px ;
     border: 2px solid black;
     border-radius: 0;
+}
+
+
+/* analytics */
+.scrollable-div {
+    margin-top: 10px;
+    height: 400px; 
+    width: 80%;
+    overflow-y: auto;
+    border: 2px solid black;
+    background-color: yellowgreen;
 }
