--- a/backend/styles/dark.css
+++ b/backend/styles/dark.css
@@ -21,6 +21,28 @@ button {
     height: 48px;
 }
 
+table {
+    background-color: pink;
+    border: 2px solid black;
+    border-radius: 0;
+}
+select {
+    background-color: gray;
+    border: 2px solid black;
+    border-radius: 0;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    outline: none;
+    margin: 6px;
+    height: 48px;
+}
+
 button:hover {
     transform: translateY(-4px);
     transform: translateX(-4px);
@@ -145,8 +167,18 @@ justify-content: space-between;
 .scrollable-div {
     margin-top: 10px;
     height: 400px; 
-    width: 80%;
+    width: 90%;
     overflow-y: auto;
     border: 2px solid black;
-    background-color: yellowgreen;
+    background-color: lightgrey;
+}
+
+
+.food-item {
+    display: table-row;
+}
+
+.food-name, .food-date {
+    display: table-cell;
+    padding: 5px; 
 }
