--- a/backend/styles/default.css
+++ b/backend/styles/default.css
@@ -20,6 +20,28 @@ button {
     margin: 6px;
     height: 48px;
 }
+table {
+    background-color: pink;
+    border: 2px solid black;
+    border-radius: 0;
+}
+
+select {
+    background-color: purple;
+    border: 2px solid black;
+    border-radius: 0;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    outline: none;
+    margin: 6px;
+    height: 48px;
+}
 
 button:hover {
     transform: translateY(-4px);
@@ -143,9 +165,18 @@ justify-content: space-between;
 /* analytics */
 .scrollable-div {
     margin-top: 10px;
-    height: 400px; 
-    width: 80%;
+    height: 365px; 
+    width: 90%;
     overflow-y: auto;
     border: 2px solid black;
     background-color: yellowgreen;
+}
+
+.food-item {
+    display: table-row;
+}
+
+.food-name, .food-date {
+    display: table-cell;
+    padding: 5px; 
 }
