frontend food delete

--- a/backend/styles/default.css
+++ b/backend/styles/default.css
@@ -176,7 +176,24 @@ justify-content: space-between;
     display: table-row;
 }
 
-.food-name, .food-date {
+.food-name, .food-date, .food-id {
     display: table-cell;
     padding: 5px; 
+}
+
+.scroll-list-button {
+    background-color: brown;
+    border: 2px solid black;
+    border-radius: 0;
+    color: initial;
+    padding: 2px;
+    text-align: initial;
+    display: inline;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: initial;
+    font-weight: initial;
+    outline: initial;
+    margin: initial;
+    height: auto;
 }
